feat(stringCalculator) : refactoring(final 선언, toList() 변경, 불필요한 변수 삭제)